Harden update IPC automation and release boundaries